# worstbird

./: .gitignore  Cargo.toml  DockerDiesel  DockerFetcher  DockerTwitter  DockerWeb  README.md  docker-compose.yml
templates/: already_downvoted.html.tera  display.html.tera  display.tera  downvoted.html.tera  downvoted.tera  vote.html.tera  vote.tera  year.tera
tests/: test_species  test_species_complete  test_species_no_embed_script  test_species_without_image
worstbird_db/: Cargo.toml
worstbird_db/migrations/2021-06-19-125223_create_birds/: down.sql  up.sql
worstbird_db/migrations/2021-06-19-125319_create_worstbird_month/: down.sql  up.sql
worstbird_db/migrations/2021-06-19-125324_create_worstbird_year/: down.sql  up.sql
worstbird_db/src/: lib.rs  models.rs  schema.rs
worstbird_fetcher/: Cargo.toml
worstbird_fetcher/src/: main.rs
worstbird_fetcher/src/bird/: web.rs
worstbird_http/: Cargo.toml  DockerWeb  diesel.toml
worstbird_http/src/: cache.rs  error.rs  main.rs  session.rs  tera_models.rs  util.rs
worstbird_tera_test/: Cargo.toml
worstbird_tera_test/src/: main.rs
worstbird_twitter/: Cargo.toml
worstbird_twitter/src/: main.rs
www/: about.html  center-content.css  default-body.css  expand.js  index.css  index.html  text.css
