[package]
name = "worstbird_fetcher"
version = "0.1.0"
authors = ["Sebastian Heusinger <heusings@googlemail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "*", features = ["blocking", "cookies", "gzip"]}
chrono = "*"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
worstbird_db = { path = "../worstbird_db/" }
imagesize = "0.8.8"
