[package]
name = "worstbird_fetcher"
version = "0.1.0"
authors = ["Sebastian Heusinger <heusings@googlemail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "*", default-features=false, features = ["rustls-tls", "blocking", "cookies", "gzip"]}
chrono = "*"
diesel = { version = "2.3.9", features = ["postgres"] }
pq-sys = { version = "0.5", features = ["bundled"] }
dotenv = "0.15.0"
worstbird_db = { path = "../worstbird_db/" }
imagesize = "0.8.8"
