[package]
name = "worstbird_http"
version = "0.1.0"
authors = ["Sebastian Heusinger <heusings@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets"] }
diesel = { version = "1.4", features = ["postgres"] }
worstbird_db = { path = "../worstbird_db/" }
dotenv = "0.15"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
num-traits = "0.2"
dashmap = "4"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["serve"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["postgres_pool"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = [ "tera"]
