[package]
name = "worstbird_twitter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitter_api = { git = "https://github.com/Heusini/RustTwitterOAuth1", branch = "master"}
dotenv = "0.15"
rocket = { version = "0.5.0-rc.1"}
